<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoggedUserActivity">

    <!--    android:background="@drawable/logged_user_background"-->

    <Button
        android:id="@+id/mark_button"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/logged_user_button_shape"
        android:text="@string/find_parking_spot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_user_message" />

    <Button
        android:id="@+id/show_parkings_button"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:background="@drawable/logged_user_button_shape"
        android:text="@string/parking_spots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mark_button" />

    <Button
        android:id="@+id/view_info_button"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:background="@drawable/logged_user_button_shape"
        android:text="@string/show_userinfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_parkings_button" />

    <Button
        android:id="@+id/logged_user_logout_button"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:background="@drawable/logged_user_button_shape"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_info_button" />


    <TextView
        android:id="@+id/welcome_user_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>